Closed Bug 1192192 Opened 9 years ago Closed 9 years ago

[Camera]Set a self-timer and take a photo, the count down number of self-timer can't be displayed.

Categories

(Core :: Graphics, defect)

ARM
Gonk (Firefox OS)
defect
Not set
major

Tracking

()

VERIFIED FIXED
mozilla43
blocking-b2g 2.5+
Tracking Status
firefox42 --- fixed
firefox43 --- fixed
b2g-v2.2 --- unaffected
b2g-master --- verified

People

(Reporter: yue.xia, Assigned: jerry)

References

Details

(Keywords: regression, Whiteboard: [2.5-aries-test-run-1])

Attachments

(4 files)

Attached video Aries_KK_2.5.3gp
[1.Description]:
[Aries KK v2.5][Flame KK v2.5][Camera]Launch Camera,  set a self-timer and take a photo, the count down number of self-timer can't be displayed.
See attachment: logcat_Aries_KK_2.5.txt & Aries_KK_2.5.3gp
Found time: 17:13

[2.Testing Steps]: 
1. Launch Camera.
2. Tap Settings button.
3. Tap "Self-Timer" and select a time.
4. Go back to capture view and take a photo.

[3.Expected Result]: 
4. The count down number of self-timer could be displayed normally.

[4.Actual Result]: 
4. The count down number of self-timer can't be displayed.

[5.Reproduction build]: 
Device: Aries KK 2.5(Affected)
Build ID               20150806003241
Gaia Revision          581de383687dc441a878d2c91a0167c6ec688fef
Gaia Date              2015-08-05 01:48:40
Gecko Revision         https://hg.mozilla.org/mozilla-central/rev/9801f91760d9
Gecko Version          42.0a1
Device Name            aries
Firmware(Release)      4.4.2
Firmware(Incremental)  eng.worker.20150805.235801
Firmware Date          Wed Aug  5 23:58:08 UTC 2015
Bootloader             s1

Device: Flame KK 2.2(Unaffected)
Build ID               20150806032503

Gaia Revision          f8b119ac30e97df991c97682ac4d4f9ca22e1793

Gaia Date              2015-07-31 13:20:55

Gecko Revision         https://hg.mozilla.org/releases/mozilla-b2g37_v2_2/rev/a9379f716e9f

Gecko Version          37.0

Device Name            flame

Firmware(Release)      4.4.2

Firmware(Incremental)  eng.cltbld.20150806.065240

Firmware Date          Thu Aug  6 06:52:51 EDT 2015

Firmware Version       v18D v4
Bootloader             L1TC000118D0

Device: Flame KK v2.5(Affected):
Build ID               20150806103226
Gaia Revision          497fe3f938722b0aa49c93f975fad5d9ed3b0a82
Gaia Date              2015-08-06 05:30:02
Gecko Revision         https://hg.mozilla.org/mozilla-central/rev/2fad09a0540d
Gecko Version          42.0a1
Device Name            flame
Firmware(Release)      4.4.2
Firmware(Incremental)  eng.cltbld.20150806.135403
Firmware Date          Thu Aug  6 13:54:17 EDT 2015
Firmware Version       v18D v4
Bootloader             L1TC000118D0


[6.Reproduction Frequency]: 
Always Recurrence,10/10

[7.TCID]: 
13279
[Blocking Requested - why for this release]: impact user obviously, nominate.
blocking-b2g: --- → 2.5?
mozilla-inbound Regression Window:
Last Working Environmental Variables:
Device: Flame KK v2.5
Build ID               20150804113949
Gaia Revision          67c38af8347f93ddc005a53f427d651b744b55c1
Gaia Date              2015-08-04 05:37:19
Gecko Revision         https://hg.mozilla.org/integration/mozilla-inbound/rev/29cc14174cc7
Gecko Version          42.0a1
Device Name            flame
Firmware(Release)      4.4.2
Firmware(Incremental)  eng.cltbld.20150805.063609
Firmware Date          Wed Aug  5 06:36:20 EDT 2015
Firmware Version       v18D v4
Bootloader             L1TC000118D0

First Broken Environmental Variables:
Device: Flame KK v2.5
Build ID               20150804120843
Gaia Revision          67c38af8347f93ddc005a53f427d651b744b55c1
Gaia Date              2015-08-04 05:37:19
Gecko Revision         https://hg.mozilla.org/integration/mozilla-inbound/rev/48f9d0c0f352
Gecko Version          42.0a1
Device Name            flame
Firmware(Release)      4.4.2
Firmware(Incremental)  eng.cltbld.20150805.063609
Firmware Date          Wed Aug  5 06:36:20 EDT 2015
Firmware Version       v18D v4
Bootloader             L1TC000118D0

First Broken Gaia & Last Working Gecko - issue DOES NOT repro
Gaia Revision          67c38af8347f93ddc005a53f427d651b744b55c1
Gecko Revision         https://hg.mozilla.org/integration/mozilla-inbound/rev/29cc14174cc7

First Broken Gecko & Last Working Gaia – issue DOES repro
Gecko Revision         https://hg.mozilla.org/integration/mozilla-inbound/rev/48f9d0c0f352
Gaia Revision          67c38af8347f93ddc005a53f427d651b744b55c1

Gecko pushlog: 
http://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=29cc14174cc7&tochange=48f9d0c0f352
QA Whiteboard: [MGSEI-Triage+]
blocking-b2g: 2.5? → 2.5+
Hi Munro, 
From comment 3, it looks like a gecko bug.
Can you have a look?
Flags: needinfo?(mchiang)
Jerry,

This is related to http://hg.mozilla.org/integration/mozilla-inbound/rev/28fac8d7cdde
Please help check the composition issue.
Flags: needinfo?(mchiang) → needinfo?(hshih)
Let me check if the culling method is still not correct. : (
Assignee: nobody → hshih
Status: NEW → ASSIGNED
Flags: needinfo?(hshih)
Component: Gaia::Camera → Graphics
Product: Firefox OS → Core
We also need to consider the program->SetRenderOffset() offset for culling.
I will have a testing code for these drawQuad culling error.
Attachment #8646231 - Flags: review?(nical.bugzilla)
See Also: → 1186236
Blocks: 1192633
Attachment #8646231 - Flags: review?(nical.bugzilla) → review+
https://hg.mozilla.org/mozilla-central/rev/513d1660a8d4
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla43
This bug has been verified as "pass" on latest build of Flame kk v2.5 and Aries kk v2.5 by the STR in Comment 0.
Actual results: The count down number of self-timer could be displayed normally.

See attachment: Verified_Aries(kk)_v2.5.3gp
Reproduce rate: 0/5

Device: Aries KK 2.5(Pass):
Build ID               20150814002719
Gaia Revision          39b121515ab8a8c3ea07f26d3ba1dd792e90217c
Gaia Date              2015-08-13 18:25:42
Gecko Revision         https://hg.mozilla.org/mozilla-central/rev/4e883591bb5dff021c108d3e30198a99547eed1e
Gecko Version          43.0a1
Device Name            aries
Firmware(Release)      4.4.2
Firmware(Incremental)  eng.worker.20150813.235024
Firmware Date          Thu Aug 13 23:50:32 UTC 2015
Bootloader             s1

Device: Flame KK v2.5(Pass):
Build ID               20150816150205
Gaia Revision          47c91ffe7f500ca1aaa60de0aabf4d2429120733
Gaia Date              2015-08-14 18:55:02
Gecko Revision         https://hg.mozilla.org/mozilla-central/rev/0876695d1abdeb363a780bda8b6cc84f20ba51c9
Gecko Version          43.0a1
Device Name            flame
Firmware(Release)      4.4.2
Firmware(Incremental)  eng.cltbld.20150816.182145
Firmware Date          Sun Aug 16 18:21:56 EDT 2015
Firmware Version       v18D v4
Bootloader             L1TC000118D0
Blocks: 1199600
Comment on attachment 8646231 [details] [diff] [review]
Fix quad culling method.

Approval Request Comment
[Feature/regressing bug #]:
Bug 1199600.

[User impact if declined]:
We can't see the scroll bar in Customize Mode.

[Describe test coverage new/current, TreeHerder]:
It's already at m-c. I try to uplift this patch to aurora locally, and the scroll bar goes back.

[Risks and why]: 
low.

[String/UUID change made/needed]:
none
Attachment #8646231 - Flags: approval-mozilla-aurora?
Jerry, why should we take this patch in Firefox 42? Thanks
Flags: needinfo?(hshih)
Hi Sylvestre,
We have a bug 1199600 that we can't see the scroll bar in ui customize mode. This patch could fix that. It's in m-c, but doesn't in Firefox42.
Flags: needinfo?(hshih) → needinfo?(sledru)
Comment on attachment 8646231 [details] [diff] [review]
Fix quad culling method.

OK, thanks, let's try with it then.
Flags: needinfo?(sledru)
Attachment #8646231 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: