Bug 1192192 - Fix quad culling method. r=nical, a=sledru